# 6DOF_Cookie_Arm

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  detach.sh  usbipd.sh
app/cookie/callbacks/: CMakeLists.txt  callbacks.cpp  callbacks.hpp
app/cookie/kinematics/: CMakeLists.txt  kinematics.cpp  kinematics.hpp  kinematics_constants.hpp
app/cookie/robot_controller/: CMakeLists.txt  robot_controller.cpp  robot_controller.hpp
app/cookie/servo_lib/: CMakeLists.txt  servo.cpp  servo.hpp
app/cookie/servo_manager/: CMakeLists.txt  servo_manager.cpp  servo_manager.hpp
app/cookie/uart/: CMakeLists.txt  uart.cpp  uart.hpp
app/main/: CMakeLists.txt  main.cpp
pythonProject2/: main6 (1).py  main7.py  matrix.txt
